<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:orientation="horizontal"
    android:background="#FFF"
    android:elevation="8dp"
    android:gravity="center_vertical"
    android:paddingStart="18dp"
    android:paddingEnd="18dp">

    <LinearLayout
        android:id="@+id/navHomeContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/navHome"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_nav_home"
            android:contentDescription="@string/nav_home"/>
        <View
            android:id="@+id/homeIndicator"
            android:layout_width="24dp"
            android:layout_height="3dp"
            android:background="#FF0000"
            android:layout_marginBottom="2dp"
            android:visibility="visible"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navScanContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/navScan"
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:src="@drawable/ic_nav_scan"
            android:contentDescription="@string/nav_scan"/>
        <View
            android:id="@+id/scanIndicator"
            android:layout_width="24dp"
            android:layout_height="3dp"
            android:background="#FF0000"
            android:layout_marginBottom="2dp"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navSearchContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/navSearch"
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/nav_search"/>
        <View
            android:id="@+id/searchIndicator"
            android:layout_width="24dp"
            android:layout_height="3dp"
            android:background="#FF0000"
            android:layout_marginBottom="2dp"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navProfileContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/navProfile"
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:src="@drawable/ic_nav_profile"
            android:contentDescription="@string/nav_profile"/>
        <View
            android:id="@+id/profileIndicator"
            android:layout_width="24dp"
            android:layout_height="3dp"
            android:background="#FF0000"
            android:layout_marginBottom="2dp"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout> 