<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".ProfileFragment">

    <RelativeLayout
        android:id="@+id/headerContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.25">

        <View
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/profile_header_gradient" />

        <ImageView
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-20dp"
            android:alpha="0.8"
            android:contentDescription="@string/cloud_decoration"
            android:rotation="10"
            android:src="@drawable/ic_cloudes" />

        <ImageView
            android:layout_width="399dp"
            android:layout_height="133dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-110dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="-80dp"
            android:alpha="1.8"
            android:contentDescription="@string/cloud_decoration"
            android:rotation="9"
            android:src="@drawable/ic_cloudes" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="124dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="-118dp"
            android:alpha="0.8"
            android:contentDescription="@string/cloud_decoration"
            android:rotation="-10"
            android:src="@drawable/ic_cloudes" />

        <ImageView
            android:layout_width="399dp"
            android:layout_height="133dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="-121dp"
            android:layout_marginBottom="-120dp"
            android:alpha="1.8"
            android:contentDescription="@string/cloud_decoration"
            android:rotation="-5"
            android:src="@drawable/ic_cloudes" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/profilePictureContainer"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        android:elevation="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="140dp"
            android:layout_height="150dp"
            app:cardCornerRadius="70dp"
            app:cardElevation="12dp"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="false">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="117dp"
                android:layout_height="115dp"
                android:contentDescription="@string/profile_image"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_pic" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="top|end"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="90dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="#FFFFFF">

            <ImageView
                android:id="@+id/cameraIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_camera"
                android:contentDescription="@string/camera_icon" />

        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/nameSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/headerContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#222222"
            android:fontFamily="sans-serif" />

        <ImageView
            android:id="@+id/editNameIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/edit_name" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/contentCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp"
        app:cardBackgroundColor="#F5F5F5"
        app:layout_constraintTop_toBottomOf="@id/nameSection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_content_placeholder"
                android:textSize="16sp"
                android:textColor="#666666"
                android:gravity="center" />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Logout"
                android:backgroundTint="@android:color/holo_red_light" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>